# rust-backend-os

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/data/: data_lector.rs  datagen.py  disk_hash.rs  filters.rs  mod.rs  pagination.rs  trip_struct.rs
src/router_local/: data_intput_struct.rs  mod.rs  trip_rorutes.rs
src/utils/: intoresponse.rs  mod.rs
