[package]
name = "rust-backend-os"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.27"
odht = "0.3.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.46.1", features = ["full"]}
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["cors"]}
